Fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@ body {
   background-color: #f9f9f9;
 }
 
+div {
+  overflow: scroll;
+}
+
 .isfull {
   width: 100%;
   padding: 5px;
